
Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git checkout -- <file>..." to discard changes in working directory)

	modified:   History.txt
	modified:   update.bat

no changes added to commit (use "git add" and/or "git commit -a")
D.2015/04/27.14_09_08.97.K.MzM.T 
On branch master
Your branch is ahead of 'origin/master' by 1 commit.
  (use "git push" to publish your local commits)

Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git checkout -- <file>..." to discard changes in working directory)

	modified:   History.txt
	modified:   update.bat

no changes added to commit (use "git add" and/or "git commit -a")
+---------+---------+---------+---------+---------+---------+---------+---------+ 
add.pop3srv.2015/04/27.14_50_37.29.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git checkout -- <file>..." to discard changes in working directory)

	modified:   History.txt
	modified:   update.bat

Untracked files:
  (use "git add <file>..." to include in what will be committed)

	pop3srv/

no changes added to commit (use "git add" and/or "git commit -a")
+---------+---------+---------+---------+---------+---------+---------+---------+ 
Visio.2015/04/27.17_38_29.77.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
	modified:   update.bat

+---------+---------+---------+---------+---------+---------+---------+---------+ 
D.E.2015/04/27.18_03_13.23.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
