@@ -56,15 +56,17 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-04-27 17:54:25 L.248'21935 T581252027 .K ~94  +----+----+----+----+----+
+     Zndex_E : //z 2015-04-28 16:27:14 L.247'27166 T3649102745.K ~101 +----+----+----+----+----+
      TimeCnt : //z 2015-04-27 16:48:05 L.248'25915 T3583709115.K ~3   +----+----+----+----+----+
-     Reg.Cnt : //z 2015-04-27 16:23:21 L.248'27399 T3581157650.K ~4   +----+----+----+----+----+
+     Reg.Cnt : //z 2015-04-28 16:26:55 L.247'27185 T3649066941.K ~5   +----+----+----+----+----+
+     #5   R+ : //z 2015-04-28 16:26:55 L.247'27185 T3649066941.K ~5     V+.102  L+.162  
      #4   R+ : //z 2015-04-27 16:23:21 L.248'27399 T3581157650.K ~4     V+.46   L+.132  
      #3   R+ : //z 2015-04-27 11:35:34 L.248'44666 T1420042932.K ~3     V+.29   L+.108  
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-04-27 17:54:25 L.248'21935 T581252027 .K ~98    R+.4    L+.156  --+----+
+     Version : //z 2015-04-28 16:27:14 L.247'27166 T3649102745.K ~106   R+.5    L+.161  --+----+
+     #5   R+ : //z 2015-04-28 16:26:55 L.247'27185 T3649066941.K ~102   R+.5    L+.163  V+.102  
      #5   V+ : //z 2015-04-27 17:54:13 L.248'21947 T581251992 .K ~95    R+.4    L+.156  
      #4   V+ : //z 2015-04-27 16:35:40 L.248'26660 T3582415510.K ~76    R+.4    L+.139  
      #3   V+ : //z 2015-04-27 16:25:20 L.248'27280 T3581229523.K ~57    R+.4    L+.136  
@@ -153,5 +155,9 @@ http://tex.loria.fr/prod-graph/zoonekynd/metapost/metapost.html
 
 //z 2015-04-27 16:48:05 L.248'25915 T3583709115.K[T3,L153,R4,V80]
 02. 了解下 visio 
-2015-04-27 17:37 todo 阅读《我用VISIO制图》
+2015-04-27 17:37 todo 阅读《我用VISIO制图》done 2015-04-28 16:26 当晚未看。
 #endregion //z 2015-04-27 16:23:21 L.248'27399 BG57IV3@XCL T3581157650.K.F4146951713-+----+----+
+
+#region 04-28 16:26 R#.5    @绘制类图，类继承
+01. 
+#endregion //z 2015-04-28 16:26:55 L.247'27185 BG57IV3@XCL T3649066941.K.F4146951713-+----+----+
